add detail activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content">
 
             <android.support.v7.widget.RecyclerView
-                android:background="@android:color/holo_orange_light"
+                android:background="@android:color/holo_green_light"
                 android:id="@+id/news_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
