--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -26,7 +26,7 @@
 
     <LinearLayout
         style="@style/Widget.CardContent"
-        android:background="@android:color/holo_orange_dark"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
