--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context="com.longyuan.zhihuretrofitvolley.MainActivity">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-
-
+    <!--
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,71 +15,71 @@
             android:orientation="horizontal">
 
             <Button
-                android:paddingLeft="20px"
-                android:paddingRight="20px"
-                android:layout_weight="1"
                 android:id="@+id/volley"
-                android:text="Volley"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <Button
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:paddingLeft="20px"
                 android:paddingRight="20px"
-                android:layout_weight="1"
+                android:text="Volley" />
+
+            <Button
                 android:id="@+id/retrofit"
-                android:text="Retrofit"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <Button
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:paddingLeft="20px"
                 android:paddingRight="20px"
-                android:layout_weight="1"
+                android:text="Retrofit" />
+
+            <Button
                 android:id="@+id/clean"
-                android:text="Clean"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingLeft="20px"
+                android:paddingRight="20px"
+                android:text="Clean" />
 
         </LinearLayout>
+    -->
 
-        <LinearLayout
-            android:layout_weight="1"
+
+    <LinearLayout
+        android:background="@android:color/holo_blue_bright"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPage_topStories"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="500px" />
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/viewPage_topStories"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_weight="1"
+       <!-- <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical">-->
 
             <TextView
-                android:text="Latest news"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="Latest news" />
 
             <android.support.v7.widget.RecyclerView
-                android:background="@color/colorPrimaryGray"
                 android:id="@+id/news_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimaryGray">
 
             </android.support.v7.widget.RecyclerView>
 
 
-        </LinearLayout>
+     <!--   </LinearLayout>-->
 
 
     </LinearLayout>
 
-
-
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.NestedScrollView>
