--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPage_topStories"
             android:layout_width="match_parent"
-            android:layout_height="500px" />
+            android:layout_height="800px" />
 
 
        <!-- <LinearLayout
@@ -71,7 +71,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/news_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="@color/colorPrimaryGray">
 
             </android.support.v7.widget.RecyclerView>
