--- a/app/src/main/res/layout/activity_storydetail.xml
+++ b/app/src/main/res/layout/activity_storydetail.xml
@@ -1,74 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.longyuan.zhihuretrofitvolley.storydetail.StoryDetailActivity">
 
-    <LinearLayout
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-        <ImageView
-            android:id="@+id/image_storydetail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        tools:context="com.longyuan.zhihuretrofitvolley.storydetail.StoryDetailActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_weight="1"
-                android:background="@android:color/holo_orange_light"
-                android:id="@+id/storydetail_comments_counter"
+
+            <ImageView
+                android:id="@+id/image_storydetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/storydetail_comments_counter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_orange_light" />
+
+
+                <TextView
+                    android:id="@+id/storydetail_popularity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_green_light" />
+
+
+                <TextView
+                    android:id="@+id/storydetail_short_comments_counter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_orange_light" />
+
+                <TextView
+                    android:id="@+id/storydetail_long_comments_counter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_green_light" />
+
+
+            </LinearLayout>
 
             <TextView
-                android:background="@android:color/holo_green_light"
-                android:layout_weight="1"
-                android:id="@+id/storydetail_popularity"
+                android:id="@+id/text_storydetail"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="StoryDetailActivity"
+                android:textStyle="bold" />
 
-
-            <TextView
-                android:background="@android:color/holo_orange_light"
-                android:layout_weight="1"
-                android:id="@+id/storydetail_short_comments_counter"
+            <WebView
+                android:id="@+id/webview_storydetail"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent">
 
-            <TextView
-                android:background="@android:color/holo_green_light"
-                android:layout_weight="1"
-                android:id="@+id/storydetail_long_comments_counter"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
+            </WebView>
 
         </LinearLayout>
 
-        <TextView
-            android:textStyle="bold"
-            android:text="StoryDetailActivity"
-            android:id="@+id/text_storydetail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <WebView
-            android:id="@+id/webview_storydetail"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </WebView>
-
-    </LinearLayout>
-
-</ScrollView >
+    </android.support.v4.widget.NestedScrollView>
+</android.support.design.widget.CoordinatorLayout>
