--- a/app/src/main/res/menu/menu_storydetail.xml
+++ b/app/src/main/res/menu/menu_storydetail.xml
@@ -6,13 +6,13 @@
         android:id="@+id/action_share"
         android:icon="@android:drawable/ic_menu_share"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title=""
         app:showAsAction="always" />
     <item
         android:id="@+id/action_fav"
         android:icon="@android:drawable/btn_star"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title=""
         app:showAsAction="always" />
 
     <item
@@ -20,12 +20,12 @@
         android:icon="@android:drawable/ic_input_get"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="always" />
+        app:showAsAction="always|withText" />
 
     <item
         android:id="@+id/action_like"
         android:icon="@android:drawable/star_big_on"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="always" />
+        app:showAsAction="always|withText" />
 </menu>
