--- a/app/src/main/res/menu/menu_storydetail.xml
+++ b/app/src/main/res/menu/menu_storydetail.xml
@@ -4,27 +4,27 @@
     tools:context="com.longyuan.zhihuretrofitvolley.storydetail.StoryDetailActivity">
     <item
         android:id="@+id/action_share"
-        android:icon="@android:drawable/ic_menu_share"
+        android:icon="@drawable/ic_share_white_18dp"
         android:orderInCategory="100"
         android:title=""
         app:showAsAction="always" />
     <item
         android:id="@+id/action_fav"
-        android:icon="@android:drawable/btn_star"
+        android:icon="@drawable/ic_grade_white_18dp"
         android:orderInCategory="100"
         android:title=""
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_comments"
-        android:icon="@android:drawable/ic_input_get"
+        android:icon="@drawable/ic_chat_white_18dp"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="always|withText" />
 
     <item
         android:id="@+id/action_like"
-        android:icon="@android:drawable/star_big_on"
+        android:icon="@drawable/ic_thumb_up_white_24dp"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="always|withText" />
