--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,85 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    tools:context="com.longyuan.zhihuretrofitvolley.MainActivity">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <!--
+    <include
+        layout="@layout/app_bar_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/volley"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingLeft="20px"
-                android:paddingRight="20px"
-                android:text="Volley" />
-
-            <Button
-                android:id="@+id/retrofit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingLeft="20px"
-                android:paddingRight="20px"
-                android:text="Retrofit" />
-
-            <Button
-                android:id="@+id/clean"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingLeft="20px"
-                android:paddingRight="20px"
-                android:text="Clean" />
-
-        </LinearLayout>
-    -->
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_main"  />
+       <!-- app:menu="@menu/main_drawer" -->
 
 
-    <LinearLayout
-        android:background="@android:color/holo_blue_bright"
+</android.support.v4.widget.DrawerLayout>
+
+    <!--<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:fillViewport="true"
+        tools:context="com.longyuan.zhihuretrofitvolley.MainActivity">
 
+        &lt;!&ndash;
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewPage_topStories"
-            android:layout_width="match_parent"
-            android:layout_height="800px" />
-
-
-       <!-- <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">-->
-
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Latest news" />
+                android:orientation="horizontal">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/news_list"
+                <Button
+                    android:id="@+id/volley"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingLeft="20px"
+                    android:paddingRight="20px"
+                    android:text="Volley" />
+
+                <Button
+                    android:id="@+id/retrofit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingLeft="20px"
+                    android:paddingRight="20px"
+                    android:text="Retrofit" />
+
+                <Button
+                    android:id="@+id/clean"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingLeft="20px"
+                    android:paddingRight="20px"
+                    android:text="Clean" />
+
+            </LinearLayout>
+        &ndash;&gt;
+
+
+        <LinearLayout
+            android:background="@android:color/holo_blue_bright"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewPage_topStories"
+                android:layout_width="match_parent"
+                android:layout_height="800px" />
+
+
+           &lt;!&ndash; <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorPrimaryGray">
+                android:orientation="vertical">&ndash;&gt;
 
-            </android.support.v7.widget.RecyclerView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Latest news" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/news_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorPrimaryGray">
+
+                </android.support.v7.widget.RecyclerView>
 
 
-     <!--   </LinearLayout>-->
+         &lt;!&ndash;   </LinearLayout>&ndash;&gt;
 
 
-    </LinearLayout>
+        </LinearLayout>
 
-</android.support.v4.widget.NestedScrollView>
+    </android.support.v4.widget.NestedScrollView>-->
